add unsplash api links

--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
     <div class="loader" id="loader" hidden>
         <img src="loader.svg" alt="Loading Image">
     </div>
+
+    <!-- Image Container -->
+    <div class="image-container" id="image-container">
+        <img src="https://images.unsplash.com/photo-1593605795260-e0220210b1c2?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Street">
+        <img src="https://images.unsplash.com/photo-1593605795260-e0220210b1c2?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Street">
+        <img src="https://images.unsplash.com/photo-1593605795260-e0220210b1c2?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Street">
+        <img src="https://images.unsplash.com/photo-1593605795260-e0220210b1c2?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Street">
+    </div>
     
     <!-- Script -->
     <script src="script.js"></script>
