add event listener on scroll, and on load data

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Forever Scroll - Images credited to Unsplash API</h1>
 
     <!-- Loader -->
-    <div class="loader" id="loader" hidden>
+    <div class="loader" id="loader">
         <img src="loader.svg" alt="Loading Image">
     </div>
 
